--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_PASSWORD: example
       POSTGRES_USER: postgres
-      POSTGRES_DB: facile_db
+      POSTGRES_DB: postegres
 
     ports:
       - "5432:5432"
